--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@ active { color: var(--accent); }
 <body>
 
 <div id="splash-screen">
-    <img src="9958AA18-BB0B-47D8-855F-E1213A900E7E.png" class="splash-img">
-    <div class="loader-bar"><div class="loader-progress"></div></div>
-    <div style="margin-top: 15px; color: var(--accent); font-size: 10px; letter-spacing: 2px;">K9 UNIT // LOADING</div>
+    <img src="9958AA18-BB0B-47D8-855F-E1213A900E7E.PNG" class="splash-img">
+    <div class="loader-bar"><div class="loader-progres"></div></div>
+    <div style="margin-top: 15px; color: var(--accent); font-size: 10px; letter-spacing: 2px;">ЗАГРУЗКА</div>
 </div>
 
 <div class="app-content" id="main-app">
