--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -23,7 +22,7 @@
             overflow: hidden;
         }
 
-        /* 1. ЭКРАН ПРИВЕТСТВИЯ */
+        /* ЭКРАН ПРИВЕТСТВИЯ */
         #splash-screen {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             background: #000; display: flex; flex-direction: column;
@@ -41,7 +40,7 @@
         .loader-progress { width: 0%; height: 100%; background: var(--accent); animation: load 2.5s forwards ease-in-out; }
         @keyframes load { to { width: 100%; } }
 
-        /* 2. ОСНОВНОЙ КОНТЕНТ */
+        /* ОСНОВНОЙ КОНТЕНТ */
         .app-content { opacity: 0; transition: opacity 0.5s ease; height: 100vh; overflow-y: auto; box-sizing: border-box; }
         .page { display: none; padding: 20px 20px 100px 20px; animation: fadeIn 0.3s ease; }
         .page.active { display: block; }
@@ -50,62 +49,55 @@
         .header { border-left: 4px solid var(--accent); padding-left: 15px; margin-bottom: 20px; }
         .header h1 { font-size: 20px; text-transform: uppercase; margin: 0; letter-spacing: 1px; }
 
-        /* КАРТОЧКИ */
         .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; }
         .card {
             background: var(--card-bg); border-radius: 15px; padding: 20px 10px;
             text-align: center; border: 1px solid rgba(255,255,255,0.05);
-            box-shadow: 0 4px 10px rgba(0,0,0,0.3);
         }
-        .card:active { transform: scale(0.95); }
         .card i { font-size: 28px; color: var(--accent); margin-bottom: 10px; display: block; }
         .card span { font-size: 12px; font-weight: 600; text-transform: uppercase; }
 
-        /* КАЛЬКУЛЯТОР */
         .calc-box { background: rgba(255,255,255,0.03); border-radius: 20px; padding: 20px; border: 1px solid rgba(255,255,255,0.1); }
         .dog-row { display: flex; align-items: center; justify-content: space-between; margin-bottom: 15px; }
-        input { background: #2a332b; border: 1px solid var(--accent); color: white; padding: 10px; border-radius: 10px; width: 90px; text-align: center; outline: none; }
+        input { background: #2a332b; border: 1px solid var(--accent); color: white; padding: 10px; border-radius: 10px; width: 80px; text-align: center; }
         .btn-add { background: var(--accent); color: #000; border: none; padding: 12px; border-radius: 12px; width: 100%; font-weight: bold; margin-bottom: 20px; }
         .res-container { background: rgba(93, 187, 99, 0.1); border-radius: 15px; padding: 15px; text-align: center; border: 1px dashed var(--accent); }
         .res-num { font-size: 28px; font-weight: bold; color: var(--accent); }
 
-        /* НАВИГАЦИЯ */
         .nav { position: fixed; bottom: 0; left: 0; width: 100%; background: var(--nav-bg); display: flex; padding: 12px 0; border-top: 1px solid rgba(255,255,255,0.1); z-index: 1000; }
-        .nav-item { flex: 1; text-align: center; color: #666; transition: 0.3s; }
-        .nav-item.
-active { color: var(--accent); }
+        .nav-item { flex: 1; text-align: center; color: #666; }
+        .nav-item.active { color: var(--accent); }
         .nav-item i { font-size: 20px; margin-bottom: 3px; display: block; }
         .nav-item span { font-size: 10px; font-weight: bold; }
 
-        /* ОКНО ЧТЕНИЯ */
-        #viewer { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: var(--tg-bg); z-index: 5000; padding: 25px; box-sizing: border-box; overflow-y: auto; }
-        .btn-close { color: var(--accent); font-weight: bold; margin-bottom: 20px; border: none; background: none; font-size: 16px; display: flex; align-items: center; }
-        .content-text { line-height: 1.6; font-size: 16px; color: #e0e0e0; }
-        .content-text b { color: var(--accent); }
+        #viewer { display: none; position: fixed; top: 0;
+
+
+: 0; width: 100%; height: 100%; background: var(--tg-bg); z-index: 5000; padding: 25px; box-sizing: border-box; overflow-y: auto; }
+        .btn-close { color: var(--accent); font-weight: bold; margin-bottom: 20px; border: none; background: none; font-size: 16px; }
     </style>
 </head>
 <body>
 
 <div id="splash-screen">
-    <img src="9958AA18-BB0B-47D8-855F-E1213A900E7E.PNG" class="splash-img">
-    <div class="loader-bar"><div class="loader-progres"></div></div>
-    <div style="margin-top: 15px; color: var(--accent); font-size: 10px; letter-spacing: 2px;">ЗАГРУЗКА</div>
+    <img src="9958AA18-BB0B-47D8-855F-E1213A900E7E.png" class="splash-img">
+    <div class="loader-bar"><div class="loader-progress"></div></div>
 </div>
 
 <div class="app-content" id="main-app">
     <div id="p-base" class="page active">
-        <div class="header"><h1>Служебная база</h1></div>
+        <div class="header"><h1>База знаний</h1></div>
         <div class="grid">
-            <div class="card" onclick="openDoc('Обязанности', '<b>Инструктор-кинолог обязан:</b><br><br>1. Обеспечивать надлежащее содержание и сбережение служебной собаки.<br>2. Знать особенности поведения и состояние здоровья собаки.<br>3. Регулярно тренировать собаку по профилю службы.<br>4. Соблюдать технику безопасности при работе.')">
+            <div class="card" onclick="openDoc('Обязанности', 'Инструктор-кинолог обязан...')">
                 <i class="fas fa-user-shield"></i><span>Обязанности</span>
             </div>
-            <div class="card" onclick="openDoc('Применение ФЗ', '<b>Статья 28-30 ФЗ:</b><br><br>Сотрудник имеет право на применение физической силы, если несиловые способы не обеспечивают выполнение задач. <br><br><b>Важно:</b> Применению силы должно предшествовать предупреждение.')">
+            <div class="card" onclick="openDoc('Применение ФЗ', 'Статья 28 ФЗ...')">
                 <i class="fas fa-gavel"></i><span>Применение ФЗ</span>
             </div>
-            <div class="card" onclick="openDoc('СС и ОР', '<b>Спецсредства и Оружие:</b><br><br>Служебные собаки относятся к спецсредствам. Применяются для:<br>— Отражения нападения.<br>— Пресечения сопротивления.<br>— Задержания преступников.<br>— Конвоирования.')">
+            <div class="card" onclick="openDoc('СС и ОР', 'Спецсредства и оружие...')">
                 <i class="fas fa-gun"></i><span>СС и ОР</span>
             </div>
-            <div class="card" onclick="openDoc('Дрессировка', '<b>Методики дрессировки:</b><br><br>1. <b>ОКД:</b> Послушание, движение рядом, аппортировка.<br>2. <b>ЗКС:</b> Выборка вещи, охрана, задержка.<br>3. <b>Следовая:</b> Постановка на след, проработка углов.')">
+            <div class="card" onclick="openDoc('Дрессировка', 'Методики дрессировки...')">
                 <i class="fas fa-paw"></i><span>Дрессировка</span>
             </div>
         </div>
@@ -122,14 +114,13 @@ active { color: var(--accent); }
             </div>
             <button class="btn-add" onclick="addRow()">+ Добавить собаку</button>
             <div class="res-container">
-                <div style="font-size: 12px; margin-bottom: 5px; opacity: 0.7;">Суточная норма на всех:</div>
                 <div class="res-num" id="total-g">0 г</div>
                 <div id="total-kg" style="opacity: 0.5; font-size: 12px;">(0.0 кг)</div>
             </div>
         </div>
     </div>
 
-   <nav class="nav">
+    <nav class="nav">
         <div class="nav-item active" id="n-base" onclick="nav('base')">
             <i class="fas fa-database"></i><span>База</span>
         </div>
@@ -137,30 +128,27 @@ active { color: var(--accent); }
             <i class="fas fa-calculator"></i><span>Корм</span>
         </div>
     </nav>
-</div> <div id="viewer" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: var(--tg-bg); z-index: 5000; padding: 25px; box-sizing: border-box; overflow-y: auto;">
-    <button class="btn-close" onclick="closeDoc()" style="color: var(--accent); font-weight: bold; margin-bottom: 20px; border: none; background: none; font-size: 16px; display: flex; align-items: center;">
-        <i class="fas fa-chevron-left"></i> &nbsp; НАЗАД
-    </button>
-    <h2 id="v-title" style="color: var(--accent); margin-top: 0;"></h2>
-    <div id="v-text" class="content-text" style="line-height: 1.6; font-size: 16px; color: #e0e0e0;"></div>
+</div>
+
+<div id="viewer">
+    <button class="btn-close" onclick="closeDoc()">← НАЗАД</button>
+    <h2 id="v-title"></h2>
+    <div id="v-text" style="line-height: 1.6;"></div>
 </div>
 
 <script>
     let tg = window.Telegram.WebApp;
     tg.expand();
 
-    // Запуск приложения
     window.onload = () => {
         setTimeout(() => {
-            const splash = document.getElementById('splash-screen');
-            if(splash) splash.style.opacity = '0';
+            document.getElementById('splash-screen').style.opacity = '0';
             document.getElementById('main-app').style.opacity = '1';
             document.body.style.overflow = 'auto';
-            setTimeout(() => { if(splash) splash.style.display = 'none'; }, 600);
+            setTimeout(() => document.getElementById('splash-screen').style.display = 'none', 600);
         }, 2800);
     };
 
-    // Навигация
     function nav(tab) {
         tg.HapticFeedback.impactOccurred('light');
         document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
@@ -169,7 +157,6 @@ active { color: var(--accent); }
         document.getElementById('n-' + tab).classList.add('active');
     }
 
-    // Документы
     function openDoc(title, text) {
         tg.HapticFeedback.impactOccurred('medium');
         document.getElementById('v-title').innerText = title;
@@ -177,18 +164,17 @@ active { color: var(--accent); }
         document.getElementById('viewer').style.display = 'block';
     }
     
-    function closeDoc() { 
-        document.getElementById('viewer').style.display = 'none'; 
-    }
+    function closeDoc() { document.getElementById('viewer').style.display = 'none'; }
 
-    // Калькулятор
     function addRow() {
         tg.HapticFeedback.impactOccurred('light');
         const row = document.createElement('div');
         row.className = 'dog-row';
-        // ИСПРАВЛЕНО: Добавлены обратные кавычки `` для HTML-строки
-        row.innerHTML = <span>Вес собаки (кг):</span><input type="number" class="w-val" placeholder="0" oninput="runCalc()">;
-        document.getElementById('dog-inputs').appendChild(row);
+        row.innerHTML = '<span>Вес собаки (кг):</span><input type="number" class="w-val" placeholder="0" oninput="runCalc()">';
+        document
+
+
+.getElementById('dog-inputs').appendChild(row);
     }
 
     function runCalc() {
@@ -206,4 +192,4 @@ active { color: var(--accent); }
     }
 </script>
 </body>
-</html>
+</html> left
