--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <body>
 
 <div id="splash-screen">
-    <img src="9958AA18-BB0B-47D8-855F-E1213A900E7E.png" class="splash-img">
+    <img src="9958AA18-BB0B-47D8-855F-E1213A900E7E" class="splash-img">
     <div class="loader-bar"><div class="loader-progress"></div></div>
 </div>
 
