--- a/index.html
+++ b/index.html
@@ -75,10 +75,7 @@
             display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; 
             background: #000000; z-index: 5000; padding: 25px; box-sizing: border-box; overflow-y: auto; 
         }
-        .btn-back { color:
-
-
-(--accent); font-weight: bold; margin-bottom: 25px; border: none; background: none; font-size: 18px; display: flex; align-items: center; }
+        .btn-back { color: var(--accent); font-weight: bold; margin-bottom: 25px; border: none; background: none; font-size: 18px; display: flex; align-items: center; }
         .v-content { color: #ffffff; line-height: 1.7; font-size: 17px; }
         .v-content b { color: var(--accent); }
     </style>
@@ -97,10 +94,10 @@
             <div class="card" onclick="toggleSubMenu(true)">
                 <i class="fas fa-address-book"></i><span>Обязанности</span>
             </div>
-            <div class="card" onclick="openDoc('Применение ФЗ,СС,ОР', '<b>Статья 28 ФЗ:</b> Сотрудник имеет право на применение физической силы...')">
-                <i class="fas fa-balance-scale"></i><span>Применение ФЗ,СС,ОР</span>
+            <div class="card" onclick="openDoc('Применение ФЗ', '<b>Статья 28 ФЗ:</b> Сотрудник имеет право на применение физической силы...')">
+                <i class="fas fa-balance-scale"></i><span>Применение ФЗ</span>
             </div>
-            <div class="card" onclick="openDoc('1210', '<b>ПРИКАЗ №1210:</b> 1232212')">
+            <div class="card" onclick="openDoc('СС и ОР', '<b>Спецсредства:</b> Служебные собаки применяются для задержания, охраны и поиска...')">
                 <i class="fas fa-shield-dog"></i><span>СС и ОР</span>
             </div>
             <div class="card" onclick="openDoc('Дрессировка', '<b>Методика:</b> Регулярные тренировки по следу, выборке и задержанию...')">
@@ -162,10 +159,7 @@
 </div>
 
 <script>
-    let
-
-
-tg = window.Telegram.WebApp;
+    let tg = window.Telegram.WebApp;
     tg.expand();
 
     window.onload = () => {
@@ -223,4 +217,4 @@ tg = window.Telegram.WebApp;
     }
 </script>
 </body>
-</html> var
+</html>
