--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
         .splash-img {
             width: 200px; height: 200px; object-fit: cover;
             border-radius: 20px; border: 2px solid var(--accent);
-            box-shadow: 0 0 30px rgba(93, 187, 99, 0.4);
         }
 
         /* КОНТЕНТ */
@@ -44,62 +43,52 @@
         @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
 
         .header { border-left: 4px solid var(--accent); padding-left: 15px; margin-bottom: 25px; }
-        .header h1 { font-size: 22px; text-transform: uppercase; margin: 0; color: var(--accent); letter-spacing: 1px; }
+        .header h1 { font-size: 22px; text-transform: uppercase; margin: 0; color: var(--accent); }
 
         .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; }
         .card {
             background: var(--card-bg); border-radius: 18px; padding: 25px 10px;
             text-align: center; border: 1px solid rgba(93, 187, 99, 0.2);
-            transition: 0.2s;
         }
-        .card:active { transform: scale(0.95); background: #252d26; }
         .card i { font-size: 30px; color: var(--accent); margin-bottom: 12px; display: block; }
-        .card span { font-size: 13px; font-weight: bold; text-transform: uppercase; color: #ffffff; }
-
-        /* НИЖНЯЯ КНОПКА НАЗАД */
-        .bottom-back-btn {
-            background: #252d26;
-            color: var(--accent);
-            border: 1px solid var(--accent);
-            border-radius: 15px;
-            padding: 15px;
-            width: 100%;
-            font-weight: bold;
-            font-size: 16px;
-            margin-top: 20px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 10px;
-        }
-
-        /* КАЛЬКУЛЯТОР */
-        .calc-box { background: rgba(255, 255, 255, 0.05); border-radius: 20px; padding: 20px; border: 1px solid rgba(255,255,255,0.1); }
-        .dog-row { display: flex; align-items: center; justify-content: space-between; margin-bottom: 15px; }
-        input { background: #2a332b; border: 1px solid var(--accent); color: white; padding: 12px; border-radius: 12px; width: 90px; text-align: center; font-size: 16px; }
-        .btn-add { background: var(--accent); color: #000; border: none; padding: 15px; border-radius: 12px; width: 100%; font-weight: bold; margin-bottom: 20px; }
-        .res-container { background: rgba(93, 187, 99, 0.15); border-radius: 15px; padding: 20px; text-align: center; border: 1px dashed var(--accent); }
+        .card span { font-size: 13px; font-weight: bold; text-transform: uppercase; }
 
         /* НАВИГАЦИЯ */
-        .nav { position: fixed; bottom: 0; left: 0; width: 100%; background: var(--nav-bg); display: flex; padding: 15px 0 25px 0; border-top: 1px solid rgba(255,255,255,0.1); z-index: 1000; }
-        .nav-item { flex: 1; text-align: center; color: #666; transition: 0.3s; }
+        .nav { position: fixed; bottom: 0; left: 0; width: 100%; background: var(--nav-bg); display: flex; padding: 15px 0 35px 0; border-top: 1px solid rgba(255,255,255,0.1); z-index: 1000; }
+        .nav-item { flex: 1; text-align: center; color: #666; }
         .nav-item.active { color: var(--accent); }
         .nav-item i { font-size: 22px; margin-bottom: 4px; display: block; }
 
-        /* ПРОСМОТР ТЕКСТА */
+        /* ОКНО ПРОСМОТРА ТЕКСТА (VIEWER) */
         #viewer { 
             display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; 
-            background: #000000; z-index: 5000; padding: 25px; box-sizing: border-box; overflow-y: auto; 
+            background: #000000; z-index: 5000; padding: 30px 25px 120px 25px; box-sizing: border-box; overflow-y: auto; 
         }
-        .v-content { color: #ffffff; line-height: 1.7; font-size: 17px; padding-bottom: 80px; }
+        .v-content { color: #ffffff; line-height: 1.7; font-size: 18px; }
         .v-content b { color: var(--accent); }
         
-        .fixed-bottom-close {
-            position: fixed; bottom: 20px; left: 20px; right: 20px;
+        /* НОВАЯ ФИКСИРОВАННАЯ КНОПКА ЗАКРЫТИЯ */
+        .fixed-close-container {
+            position: fixed;
+            bottom: 0; left: 0; width: 100%;
+            background: linear-gradient(transparent, #000 30%);
+            padding: 30px 20px 40px 20px;
+            box-sizing: border-box;
+            z-index: 5001;
+            display: none; /* Включается вместе с viewer */
+        }
+        .btn-close-final {
             background: var(--accent); color: #000;
             border: none; border-radius: 15px; padding: 18px;
-            font-weight: bold; font-size: 16px; text-align: center;
-            box-shadow: 0 -5px 20px rgba(0,0,0,0.5);
+            font-weight: bold; font-size: 16px; width: 100%;
+            display: flex; align-items: center; justify-content: center; gap: 10px;
+            box-shadow: 0 0 20px rgba(93, 187, 99, 0.3);
+        }
+
+        .sub-back-btn {
+            background: #252d26; color: var(--accent);
+            border: 1px solid var(--accent); border-radius: 15px;
+            padding: 15px; width: 100%; font-weight: bold; margin-top: 20px;
         }
     </style>
 </head>
@@ -107,24 +96,24 @@
 
 <div id="splash-screen">
     <img src="9958AA18-BB0B-47D8-855F-E1213A900E7E.png" class="splash-img">
-    <div style="margin-top: 25px; color: var(--accent); letter-spacing: 3px; font-size: 14px; font-weight: bold;">K9 UNIT LOADING...</div>
+    <div style="margin-top: 20px; color: var(--accent); font-weight: bold;">ЗАГРУЗКА...</div>
 </div>
 
 <div class="app-content" id="main-app">
     <div id="p-base" class="page active">
-        <div class="header"><h1>База Знаний</h1></div>
+        <div class="header"><h1>Справочник</h1></div>
         <div class="grid">
             <div class="card" onclick="toggleSubMenu(true)">
-                <i class="fas fa-address-book"></i><span>Обязанности</span>
+                <i class="fas fa-user-shield"></i><span>Обязанности</span>
             </div>
-            <div class="card" onclick="openDoc('Применение ФЗ', '<b>Статья 28 ФЗ:</b> Сотрудник имеет право на применение физической силы...')">
-                <i class="fas fa-balance-scale"></i><span>Применение ФЗ</span>
+            <div class="card" onclick="openDoc('Применение ФЗ', '<b>Статья 28 ФЗ:</b> Сотрудник имеет право на применение силы...')">
+                <i class="fas fa-gavel"></i><span>Применение ФЗ</span>
             </div>
-            <div class="card" onclick="openDoc('СС и ОР', '<b>Спецсредства:</b> Служебные собаки применяются для задержания, охраны и поиска...')">
+            <div class="card" onclick="openDoc('СС и ОР', '<b>Спецсредства:</b> Применяются для отражения нападения...')">
                 <i class="fas fa-shield-dog"></i><span>СС и ОР</span>
             </div>
-            <div class="card" onclick="openDoc('Дрессировка', '<b>Методика:</b> Регулярные тренировки по следу, выборке и задержанию...')">
-                <i class="fas fa-graduation-cap"></i><span>Дрессировка</span>
+            <div class="card" onclick="openDoc('Дрессировка', '<b>Методики:</b> ОКД, ЗКС, Следовая работа...')">
+                <i class="fas fa-paw"></i><span>Дрессировка</span>
             </div>
         </div>
     </div>
@@ -132,58 +121,57 @@
     <div id="p-submenu" class="page">
         <div class="header"><h1>Направление</h1></div>
         <div class="grid">
-            <div class="card" onclick="openDoc('Конвой', '<b>Конвойная служба:</b> Охрана и конвоирование...')">
+            <div class="card" onclick="openDoc('Конвой', '<b>Конвойная служба:</b> Охрана и конвоирование осужденных...')">
                 <i class="fas fa-user-lock"></i><span>Конвой</span>
             </div>
-            <div class="card" onclick="openDoc('СИЗО', '<b>СИЗО:</b> Обыскные мероприятия...')">
-                <i class="fas fa-hotel"></i><span>СИЗО</span>
+            <div class="card" onclick="openDoc('СИЗО', '<b>СИЗО:</b> Обыскные мероприятия, досмотр...')">
+                <i class="fas fa-building"></i><span>СИЗО</span>
             </div>
-            <div class="card" onclick="openDoc('ИК', '<b>ИК:</b> Патрулирование периметра...')">
+            <div class="card" onclick="openDoc('ИК', '<b>ИК:</b> Патрулирование, охрана объектов...')">
                 <i class="fas fa-tower-observation"></i><span>ИК</span>
             </div>
-            <div class="card" onclick="openDoc('Питомник', '<b>Питомник:</b> Разведение и уход...')">
+            <div class="card" onclick="openDoc('Питомник', '<b>Питомник:</b> Разведение и уход за собаками...')">
                 <i class="fas fa-dog"></i><span>Питомник</span>
             </div>
         </div>
-        <button class="bottom-back-btn" onclick="toggleSubMenu(false)">
-            <i class="fas fa-arrow-left"></i> НАЗАД В МЕНЮ
-        </button>
+        <button class="sub-back-btn" onclick="toggleSubMenu(false)">← НАЗАД В МЕНЮ</button>
     </div>
 
     <div id="p-calc" class="page">
-        <div class="header"><h1>Калькулятор</h1></div>
-        <div class="calc-box">
+        <div class="header"><h1>Корм</h1></div>
+        <div style="background: #1a211b; padding: 20px; border-radius: 20px;">
             <div id="dog-inputs">
-                <div class="dog-row">
+                <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px;">
                     <span>Вес собаки (кг):</span>
                     <input type="number" class="w-val" placeholder="0" oninput="runCalc()">
                 </div>
             </div>
-            <button class="btn-add" onclick="addRow()">+ Добавить собаку</button>
-            <div class="res-container">
-                <div style="font-size: 32px; font-weight: bold; color: var(--accent);" id="total-g">0 г</div>
-                <div id="total-kg" style="opacity: 0.8; font-size: 14px;">(0.0 кг)</div>
+            <button onclick="addRow()" style="width:100%; padding: 12px; background: none; border: 1px dashed var(--accent); color: var(--accent); border-radius: 10px; margin-bottom: 15px;">+ Собака</button>
+            <div style="text-align: center; border-top: 1px solid #333; padding-top: 15px;">
+                <div id="total-g" style="font-size: 28px; font-weight: bold; color: var(--accent);">0 г</div>
+                <div id="total-kg" style="font-size: 14px; opacity: 0.6;">(0.0 кг)</div>
             </div>
         </div>
     </div>
 
     <nav class="nav">
         <div class="nav-item active" id="n-base" onclick="nav('base')">
-            <i class="fas fa-folder-open"></i><span>Справочник</span>
+            <i class="fas fa-database"></i><span>База</span>
         </div>
         <div class="nav-item" id="n-calc" onclick="nav('calc')">
-            <i class="fas fa-bone"></i><span>Корм</span>
+            <i class="fas fa-calculator"></i><span>Корм</span>
         </div>
     </nav>
 </div>
 
 <div id="viewer">
-    <div id="v-title-box" class="header" style="margin-top: 20px;">
-        <h1 id="v-title" style="font-size: 24px;"></h1>
-    </div>
+    <div class="header"><h1 id="v-title"></h1></div>
     <div id="v-text" class="v-content"></div>
-    <button class="fixed-bottom-close" onclick="closeDoc()">
-        <i class="fas fa-check"></i> ПРОЧИТАНО
+</div>
+
+<div id="close-container" class="fixed-close-container">
+    <button class="btn-close-final" onclick="closeDoc()">
+        <i class="fas fa-check-circle"></i> ЗАКРЫТЬ
     </button>
 </div>
 
@@ -196,7 +184,7 @@
             document.getElementById('splash-screen').style.opacity = '0';
             document.getElementById('main-app').style.opacity = '1';
             setTimeout(() => document.getElementById('splash-screen').style.display = 'none', 600);
-        }, 2500);
+        }, 2000);
     };
 
     function nav(tab) {
@@ -219,17 +207,18 @@
         document.getElementById('v-title').innerText = title;
         document.getElementById('v-text').innerHTML = text;
         document.getElementById('viewer').style.display = 'block';
+        document.getElementById('close-container').style.display = 'block';
     }
 
     function closeDoc() { 
         tg.HapticFeedback.impactOccurred('light');
         document.getElementById('viewer').style.display = 'none'; 
+        document.getElementById('close-container').style.display = 'none';
     }
 
     function addRow() {
-        tg.HapticFeedback.impactOccurred('light');
         const row = document.createElement('div');
-        row.className = 'dog-row';
+        row.style = "display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px;";
         row.innerHTML = `<span>Вес собаки (кг):</span><input type="number" class="w-val" placeholder="0" oninput="runCalc()">`;
         document.getElementById('dog-inputs').appendChild(row);
     }
