--- a/index.html
+++ b/index.html
@@ -3,91 +3,166 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>K9 Guide</title>
+    <title>K9 Tactical Guide</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root { --accent: #5dbb63; --dark: #1a211b; }
         body {
-            font-family: 'Segoe UI', sans-serif; margin: 0;
+            font-family: 'Segoe UI', sans-serif; margin: 0; padding: 0;
             background-image: linear-gradient(rgba(255,255,255,0.85), rgba(255,255,255,0.85)), url('bg.jpg');
             background-size: 300px; background-attachment: fixed;
+            overflow-x: hidden;
         }
-        .app-content { padding: 20px 20px 150px 20px; }
-        .header-box { background: var(--dark); padding: 15px; border-radius: 12px; margin-bottom: 20px; border-left: 5px solid var(--accent); color: white; }
-        .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; }
-        .card { background: var(--dark); border-radius: 20px; padding: 25px 10px; text-align: center; color: white; border: 1px solid rgba(255,255,255,0.1); }
-        .card i { font-size: 30px; color: var(--accent); margin-bottom: 10px; display: block; }
-        .card span { font-size: 12px; font-weight: bold; text-transform: uppercase; }
-        
+
+        /* ЗАСТАВКА */
+        #splash-screen {
+            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+            background: #000; display: flex; flex-direction: column;
+            justify-content: center; align-items: center; z-index: 9999;
+            transition: opacity 0.6s ease;
+        }
+        .splash-img { width: 180px; height: 180px; border-radius: 20px; border: 2px solid var(--accent); }
+
+        .app-content { opacity: 0; transition: opacity 0.5s ease; padding: 20px 20px 150px 20px; }
         .page { display: none; animation: fadeIn 0.3s ease; }
         .active { display: block; }
         @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
 
+        .header-box { background: var(--dark); padding: 15px; border-radius: 12px; margin-bottom: 20px; border-left: 5px solid var(--accent); color: white; }
+        .header-box h1 { margin: 0; font-size: 20px; text-transform: uppercase; }
+
+        .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; }
+        .card { background: var(--dark); border-radius: 20px; padding: 25px 10px; text-align: center; color: white; border: 1px solid rgba(255,255,255,0.1); box-shadow: 0 4px 10px rgba(0,0,0,0.2); }
+        .card i { font-size: 30px; color: var(--accent); margin-bottom: 10px; display: block; }
+        .card span { font-size: 12px; font-weight: bold; text-transform: uppercase; }
+
+        /* КАЛЬКУЛЯТОР */
+        .calc-box { background: var(--dark); border-radius: 20px; padding: 20px; color: white; margin-top: 10px; }
+        input { background: #2a332b; border: 1px solid var(--accent); color: white; padding: 10px; border-radius: 10px; width: 70px; text-align: center; }
+
+        /* ОКНО ПРОСМОТРА */
         #viewer { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: white; z-index: 9999; padding: 30px; box-sizing: border-box; overflow-y: auto; }
-        .btn-close { position: fixed; bottom: 30px; left: 20px; right: 20px; background: var(--dark); color: var(--accent); padding: 18px; border: none; border-radius: 15px; font-weight: bold; }
-        .nav { position: fixed; bottom: 0; left: 0; width: 100%; background: #111; display: flex; padding: 15px 0 35px; border-top: 1px solid #333; }
-        .nav-item { flex: 1; text-align: center; color: #555; }
+        .btn-close { position: fixed; bottom: 30px; left: 20px; right: 20px; background: var(--dark); color: var(--accent); padding: 18px; border: none; border-radius: 15px; font-weight: bold; font-size: 16px; }
+
+        /* НАВИГАЦИЯ */
+        .nav { position: fixed; bottom: 0; left: 0; width: 100%; background: #111; display: flex; padding: 15px 0 35px; border-top: 1px solid #333; z-index: 1000; }
+        .nav-item { flex: 1; text-align: center; color: #555; font-size: 12px; }
         .nav-item.active { color: var(--accent); }
+        .nav-item i { font-size: 20px; display: block; margin-bottom: 4px; }
     </style>
 </head>
 <body>
 
-<div class="app-content">
-    <div id="p-main" class="page active">
+<div id="splash-screen">
+    <img src="9958AA18-BB0B-47D8-855F-E1213A900E7E.PNG" class="splash-img">
+</div>
+
+<div class="app-content" id="main-app">
+    <div id="p-base" class="page active">
         <div class="header-box"><h1>Справочник K9</h1></div>
         <div class="grid">
-            <div class="card" onclick="showSub()">
-                <i class="fas fa-user-shield"></i><span>Обязанности</span>
-            </div>
-            <div class="card" onclick="loadContent('fz', 'Закон')">
-                <i class="fas fa-gavel"></i><span>Применение ФЗ</span>
-            </div>
+            <div class="card" onclick="toggleSub(true)"><i class="fas fa-user-shield"></i><span>Обязанности</span></div>
+            <div class="card" onclick="loadContent('fz', 'Закон')"><i class="fas fa-gavel"></i><span>Применение ФЗ</span></div>
+            <div class="card" onclick="loadContent('ssor', 'СС и ОР')"><i class="fas fa-shield-dog"></i><span>СС и ОР</span></div>
+            <div class="card" onclick="loadContent('dress', 'Дрессировка')"><i class="fas fa-graduation-cap"></i><span>Дрессировка</span></div>
         </div>
     </div>
 
     <div id="p-sub" class="page">
         <div class="header-box"><h1>Направления</h1></div>
         <div class="grid">
-            <div class="card" onclick="loadContent('konvoy', 'Конвой')"><i class="fas fa-truck"></i><span>Конвой</span></div>
-            <div class="card" onclick="loadContent('sizo', 'СИЗО')"><i class="fas fa-building"></i><span>СИЗО</span></div>
+            <div class="card" onclick="loadContent('konvoy', 'Конвой')"><i class="fas fa-truck-lock"></i><span>Конвой</span></div>
+            <div class="card" onclick="loadContent('sizo', 'СИЗО')"><i class="fas fa-building-user"></i><span>СИЗО</span></div>
             <div class="card" onclick="loadContent('ik', 'ИК')"><i class="fas fa-shield-halved"></i><span>ИК</span></div>
-            <div class="card" onclick="loadContent('prazvod', 'Питомник')"><i class="fas fa-paw"></i><span>Питомник</span></div>
+            <div class="card" onclick="loadContent('prazvod', 'Питомник')"><i class="fas fa-dog"></i><span>Питомник</span></div>
         </div>
-        <button onclick="showMain()" style="width:100%; margin-top:20px; padding:15px; background:var(--dark); color:white; border-radius:12px; border:none;">← НАЗАД</button>
+        <button onclick="toggleSub(false)" style="width:100%; margin-top:20px; padding:15px; background:var(--dark); color:white; border-radius:12px; border:none; font-weight:bold;">← НАЗАД</button>
     </div>
+
+    <div id="p-calc" class="page">
+        <div class="header-box"><h1>Расчет корма</h1></div>
+        <div class="calc-box">
+            <div id="dog-inputs">
+                <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:15px;">
+                    <span>Вес собаки (кг):</span>
+                    <input type="number" class="w-val" placeholder="0" oninput="runCalc()">
+                </div>
+            </div>
+            <button onclick="addRow()" style="width:100%; padding:12px; background:none; border:1px dashed var(--accent); color:var(--accent); border-radius:10px; margin-bottom:15px;">+ Добавить собаку</button>
+            <div style="text-align:center; border-top:1px solid #444; padding-top:15px;">
+                <div id="total-g" style="font-size:28px; font-weight:bold; color:var(--accent);">0 г</div>
+                <div id="total-kg" style="font-size:14px; opacity:0.6;">(0.0 кг)</div>
+            </div>
+        </div>
+    </div>
+
+    <nav class="nav">
+        <div class="nav-item active" id="n-base" onclick="nav('base')"><i class="fas fa-database"></i>База</div>
+        <div class="nav-item" id="n-calc" onclick="nav('calc')"><i class="fas fa-calculator"></i>Корм</div>
+    </nav>
 </div>
 
 <div id="viewer">
     <h2 id="v-title" style="color:var(--dark); border-bottom: 2px solid var(--accent); padding-bottom:10px;"></h2>
-    <div id="v-body" style="font-size: 17px; line-height: 1.6; color: #333;">Загрузка...</div>
+    <div id="v-body" style="font-size: 17px; line-height: 1.6; color: #333; padding-bottom: 100px;"></div>
     <button class="btn-close" onclick="closeDoc()">ЗАКРЫТЬ</button>
 </div>
 
 <script>
-    function showSub() { document.getElementById('p-main').classList.remove('active'); document.getElementById('p-sub').classList.add('active'); }
-    function showMain() { document.getElementById('p-sub').classList.remove('active'); document.getElementById('p-main').classList.add('active'); }
+    let tg = window.Telegram.WebApp;
+    tg.expand();
 
-    // ФУНКЦИЯ ЗАГРУЗКИ ТЕКСТА ИЗ ФАЙЛА
+    window.onload = () => {
+        setTimeout(() => {
+            document.getElementById('splash-screen').style.opacity = '0';
+            document.getElementById('main-app').style.opacity = '1';
+            setTimeout(() => document.getElementById('splash-screen').style.display = 'none', 600);
+        }, 2000);
+    };
+
+    function nav(tab) {
+        document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
+        document.querySelectorAll('.nav-item').forEach(n => n.classList.remove('active'));
+        document.getElementById('p-' + tab).classList.add('active');
+        document.getElementById('n-' + tab).classList.add('active');
+        if(tab === 'base') toggleSub(false);
+    }
+
+    function toggleSub(show) {
+        document.getElementById('p-base').classList.toggle('active', !show);
+        document.getElementById('p-sub').classList.toggle('active', show);
+    }
+
     async function loadContent(key, title) {
         document.getElementById('v-title').innerText = title;
-        document.getElementById('v-body').innerText = 'Загрузка данных...';
+        document.getElementById('v-body').innerHTML = 'Загрузка...';
         document.getElementById('viewer').style.display = 'block';
-
         try {
-            // Читаем наш файл data.json
             const response = await fetch('data.json');
             const data = await response.json();
-            
-            // Если такой ключ есть в файле — показываем текст
-            document.getElementById('v-body').innerHTML = data[key] || "Текст еще не добавлен.";
-        } catch (e) {
-            document.getElementById('v-body').innerText = "Ошибка загрузки файла data.json";
-        }
+            document.getElementById('v-body').innerHTML = data[key] || "Текст не найден.";
+        } catch (e) { document.getElementById('v-body').innerHTML = "Ошибка: создайте файл data.json на GitHub."; }
     }
 
     function closeDoc() { document.getElementById('viewer').style.display = 'none'; }
-</script>
 
+    function addRow() {
+        const div = document.createElement('div');
+        div.style = "display:flex; justify-content:space-between; align-items:center; margin-bottom:15px;";
+        div.innerHTML = `<span>Вес собаки (кг):</span><input type="number" class="w-val" placeholder="0" oninput="runCalc()">`;
+        document.getElementById('dog-inputs').appendChild(div);
+    }
+
+    function runCalc() {
+        let total = 0;
+        document.querySelectorAll('.w-val').forEach(i => {
+            let v = parseFloat(i.value) || 0;
+            if(v > 0) total += (v < 25 ? 400 : (v <= 45 ? 600 : 1000));
+        });
+        document.getElementById('total-g').innerText = total + ' г';
+        document.getElementById('total-kg').innerText = '(' + (total/1000).toFixed(1) + ' кг)';
+    }
+</script>
 </body>
 </html>
